--- a/src/app/features/game-view/gui/share-btns/share-btns.component.css
+++ b/src/app/features/game-view/gui/share-btns/share-btns.component.css
@@ -4,7 +4,7 @@
   position: relative;
   width: 24.4%;
   margin-bottom: 1%;
-  color: #5ac8fa;
+  color: #b5b5b5;
 }
 
 .share-btn span {
